# playerctlctl

./: .gitignore  LICENSE.txt  README.md  commands.py  default.nix  outputter.py  overlay.nix  pkgs.nix  playerctlctl.py  playerctlctl.service  pyproject.toml
bar_status/: __init__.py  __main__.py  outputter.py  rpc_wrapper.py
playerctlctl/: __init__.py  __main__.py  commands.py  core.py  events.py  outputter.py  utils.py
